tests/snapshots/validator_snapshots__validator_all@validator-112.snap
---
source: tests/validator_snapshots.rs
assertion_line: 51
expression: result
input_file: examples/spec/06_type_logic/as_cast.of
---
ValidationErrors(
    [
        "unknown variable 'print' in function 'test_module::process'",
        "unknown variable 'print' in function 'test_module::process'",
    ],
)
