tests/snapshots/validator_snapshots__validator_all@validator-113.snap
---
source: tests/validator_snapshots.rs
assertion_line: 51
expression: result
input_file: examples/spec/06_type_logic/is_operator.of
---
Ok
