tests/snapshots/validator_snapshots__validator_all@validator-114.snap
---
source: tests/validator_snapshots.rs
expression: result
input_file: examples/spec/09_null_handling/nullable_return.of
---
ParserError(
    "unexpected token 'var'",
)
