tests/snapshots/validator_snapshots__validator_all@validator-115.snap
---
source: tests/validator_snapshots.rs
assertion_line: 51
expression: result
input_file: examples/spec/07_error_management/error_union_return.of
---
Ok
