tests/snapshots/validator_snapshots__validator_all@validator-116.snap
---
source: tests/validator_snapshots.rs
assertion_line: 51
expression: result
input_file: examples/spec/08_numeric_conversions/float_narrowing.of
---
ParserError(
    "unexpected token 'var'",
)
