tests/snapshots/validator_snapshots__validator_all@validator-119.snap
---
source: tests/validator_snapshots.rs
assertion_line: 51
expression: result
input_file: examples/spec/10_generics/generic_function.of
---
Ok
