tests/snapshots/validator_snapshots__validator_all@validator-121.snap
---
source: tests/validator_snapshots.rs
expression: result
input_file: examples/spec/14_ffi/extern_fn_type.of
---
Ok
